labs/netpol-lab.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab-frontend
---
apiVersion: v1
kind: Pod
metadata:
  name: backend-app
  namespace: lab-backend
  labels:
    app: secure-api
spec:
  containers:
  - name: nginx
    image: nginx:alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: attacker
  namespace: lab-frontend
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-except-frontend
  namespace: lab-backend
spec:
  podSelector:
    matchLabels:
      app: secure-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: lab-frontend
    ports:
    - protocol: TCP
      port: 80
